WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
210787
TextureMapper should skip clipping a content layer if it's not needed
https://bugs.webkit.org/show_bug.cgi?id=210787
Summary
TextureMapper should skip clipping a content layer if it's not needed
Tomoki Imai
Reported
2020-04-21 02:33:17 PDT
Our internal review found that there is a chance to optimize
bug 210544
patch. We don't need to clip a content layer if the clipping rect contains the content rect. This patch doesn't change the behavior but saves stencil indices.
Attachments
patch
(2.29 KB, patch)
2020-04-21 02:42 PDT
,
Tomoki Imai
no flags
Details
Formatted Diff
Diff
patch
(4.42 KB, patch)
2020-05-08 03:15 PDT
,
Tomoki Imai
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Tomoki Imai
Comment 1
2020-04-21 02:42:29 PDT
Created
attachment 397064
[details]
patch
Tomoki Imai
Comment 2
2020-05-08 03:15:55 PDT
Created
attachment 398851
[details]
patch Also update the test expectation.
https://bugs.webkit.org/show_bug.cgi?id=210544#c5
Although it's not enabled because of
bug 163528
and
bug 177536
EWS
Comment 3
2020-05-08 16:11:21 PDT
Committed
r261422
: <
https://trac.webkit.org/changeset/261422
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 398851
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug