TextureMapper should skip clipping a content layer if it's not needed https://bugs.webkit.org/show_bug.cgi?id=210787

Patch by Tomoki Imai <Tomoki.Imai@sony.com> on 2020-05-08
Reviewed by Don Olmstead.

Source/WebCore:

This patch follows up r260174.
We don't need to clip a content layer if the clipping rect contains the content rect.
This patch doesn't change the behavior but saves stencil indices.

* platform/graphics/texmap/TextureMapperLayer.cpp:
(WebCore::TextureMapperLayer::paintSelf):

LayoutTests:

This patch follows up r260174 by updating the test expectation.

* platform/gtk/compositing/video/video-object-fit-expected.txt: Added.

Canonical link: https://commits.webkit.org/224568@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@261422 268f45cc-cd09-0410-ab3c-d52691b4dbfc